--- a/Lab_Assignment_01.ipynb
+++ b/Lab_Assignment_01.ipynb
@@ -62,7 +62,7 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "# Write your code to create the 10x5 random matrix here\n",
+        "\n",
         "matrix = np.random.rand(10, 5)\n",
         "print(\"Generated 10x5 random matrix:\")\n",
         "print(matrix)"
@@ -458,9 +458,7 @@
         "from skimage import io\n",
         "import os\n",
         "\n",
-        "# 1. Load the image from a local file\n",
-        "# Please download the image manually from the provided link and upload it to your Colab environment.\n",
-        "# Make sure the uploaded file is named 'Lenna_(test_image).png'\n",
+        "\n",
         "image_filename = \"Lenna_(test_image).png\"\n",
         "\n",
         "try:\n",
@@ -470,16 +468,15 @@
         "    else:\n",
         "        print(f\"Error: Local image file '{image_filename}' not found.\")\n",
         "        print(\"Please download the image manually from the link and upload it to your Colab environment.\")\n",
-        "        img_array = None # Set img_array to None to indicate failure\n",
+        "        img_array = None\n",
         "\n",
         "except Exception as e:\n",
         "    print(f\"Failed to load image from local file: {e}\")\n",
         "    img_array = None\n",
         "\n",
         "\n",
-        "# Proceed with the rest of the tasks only if img_array was loaded successfully\n",
         "if img_array is not None:\n",
-        "    # 2. Find the size, min, max, mean, and standard deviation\n",
+        "\n",
         "    image_size = img_array.shape\n",
         "    image_min = np.min(img_array)\n",
         "    image_max = np.max(img_array)\n",
@@ -492,16 +489,13 @@
         "    print(f\"Mean pixel value: {image_mean}\")\n",
         "    print(f\"Standard deviation of pixel values: {image_std}\")\n",
         "\n",
-        "    # 3. Plot the original image\n",
+        "\n",
         "    plt.figure(figsize=(6, 6))\n",
         "    plt.imshow(img_array)\n",
         "    plt.title('Original Image')\n",
-        "    plt.axis('off') # Hide axes for cleaner image\n",
+        "    plt.axis('off')\n",
         "    plt.show()\n",
         "\n",
-        "    # 4. Resize the image to 50 x 50\n",
-        "    # Check if the image is color (3 channels) or grayscale (2 channels, or no channel info, but size > 0).\n",
-        "    # If it's color, resize to (50, 50, 3). If it's grayscale, resize to (50, 50).\n",
         "    if len(img_array.shape) == 3:\n",
         "      resized_img_array = resize(img_array, (50, 50, img_array.shape[2]))\n",
         "    else:\n",
@@ -510,30 +504,27 @@
         "    print(f\"\\nShape of resized image array: {resized_img_array.shape}\")\n",
         "\n",
         "\n",
-        "    # 5. Convert the image to grayscale (if it's not already)\n",
-        "    if len(resized_img_array.shape) == 3 and resized_img_array.shape[2] >= 3: # Check for color channels\n",
+        "    if len(resized_img_array.shape) == 3 and resized_img_array.shape[2] >= 3:\n",
         "      grayscale_img_array = rgb2gray(resized_img_array)\n",
         "      print(\"Image converted to grayscale.\")\n",
         "    else:\n",
-        "      grayscale_img_array = resized_img_array # It's already grayscale or has alpha channel\n",
+        "      grayscale_img_array = resized_img_array\n",
         "      print(\"Image was already grayscale or had an alpha channel, no conversion needed.\")\n",
         "\n",
         "    print(f\"Shape of grayscale image array: {grayscale_img_array.shape}\")\n",
         "\n",
         "\n",
-        "    # 6. Plot the grayscale image\n",
+        "\n",
         "    plt.figure(figsize=(4, 4))\n",
         "    plt.imshow(grayscale_img_array, cmap='gray')\n",
         "    plt.title('Grayscale Image (50x50)')\n",
-        "    plt.axis('off') # Hide axes for cleaner image\n",
+        "    plt.axis('off')\n",
         "    plt.show()\n",
         "\n",
-        "    # 7. Save the grayscale image\n",
         "    imsave('grayscale_lena_50x50.png', grayscale_img_array, cmap='gray')\n",
         "    print(\"\\nGrayscale image saved as grayscale_lena_50x50.png\")\n",
         "\n",
-        "    # 8. Reshape the image to form a vector of size 2500 x 1\n",
-        "    # Ensure the grayscale image is 2D before reshaping\n",
+        "\n",
         "    if len(grayscale_img_array.shape) == 2:\n",
         "      reshaped_vector = grayscale_img_array.reshape(-1, 1)\n",
         "      print(f\"\\nShape of reshaped vector: {reshaped_vector.shape}\")\n",
@@ -541,7 +532,7 @@
         "      print(\"\\nGrayscale image is not 2D, cannot reshape to 2500x1 vector.\")\n",
         "\n",
         "\n",
-        "    # 9. Finish task: Summary of findings\n",
+        "\n",
         "    print(\"\\n--- Summary ---\")\n",
         "    print(f\"Original Image Size: {image_size}\")\n",
         "    print(f\"Resized Grayscale Image Shape: {grayscale_img_array.shape}\")\n",
@@ -553,13 +544,13 @@
         "    print(\"\\nImage was not loaded successfully, please check the instructions above.\")"
       ],
       "metadata": {
-        "id": "EaiaaQJoN8C2",
-        "outputId": "c13499e2-6321-43b7-e527-90d8725ba4ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EaiaaQJoN8C2",
+        "outputId": "a5b62f3c-d388-42c3-ed18-78600cc022b1"
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,26 +580,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 689
         },
         "id": "5q8CTCW0KAdK",
-        "outputId": "13605275-ad52-42e6-ad2b-dadadf5d384e"
+        "outputId": "81cbdac8-454f-440b-c269-643d74e3ae6d"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<>:53: SyntaxWarning: invalid escape sequence '\\c'\n",
-            "<>:53: SyntaxWarning: invalid escape sequence '\\c'\n",
-            "/tmp/ipython-input-1792433377.py:53: SyntaxWarning: invalid escape sequence '\\c'\n",
-            "  plt.plot(x, method1_approx, label='Method 1 (Taylor $e^{2x} \\cdot$ Taylor $e^{3x}$)')\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -616,6 +597,16 @@
             "MSE for Method 1 (Taylor of e^2x * Taylor of e^3x): 478.4388427279695\n",
             "MSE for Method 2 (Taylor of e^5x): 788.744967635412\n",
             "Method 1 is more accurate.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<>:51: SyntaxWarning: invalid escape sequence '\\c'\n",
+            "<>:51: SyntaxWarning: invalid escape sequence '\\c'\n",
+            "/tmp/ipython-input-2071393084.py:51: SyntaxWarning: invalid escape sequence '\\c'\n",
+            "  plt.plot(x, method1_approx, label='Method 1 (Taylor $e^{2x} \\cdot$ Taylor $e^{3x}$)')\n"
           ]
         },
         {
@@ -634,7 +625,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
-        "# Define the Taylor approximation function\n",
+        "\n",
         "def taylor_approx_exp(x, a, order):\n",
         "    \"\"\"Computes the Taylor approximation of e^u around 'a'.\"\"\"\n",
         "    u = x - a\n",
@@ -647,31 +638,29 @@
         "    else:\n",
         "        raise ValueError(\"Only orders 0, 1, and 2 are supported.\")\n",
         "\n",
-        "# Define the range and interval for x\n",
         "x = np.arange(-1, 1.01, 0.01)\n",
-        "a = 0 # Approximation point\n",
+        "a = 0\n",
         "\n",
-        "# Original functions\n",
         "y_e2x = np.exp(2 * x)\n",
         "y_e3x = np.exp(3 * x)\n",
         "y_e5x = np.exp(5 * x)\n",
         "\n",
-        "# Method 1: Taylor approximation of e^2x and e^3x separately, then multiply\n",
+        "\n",
         "taylor_e2x = taylor_approx_exp(2 * x, 2 * a, 2)\n",
         "taylor_e3x = taylor_approx_exp(3 * x, 3 * a, 2)\n",
         "method1_approx = taylor_e2x * taylor_e3x\n",
         "\n",
-        "# Method 2: Taylor approximation of e^5x\n",
+        "\n",
         "method2_approx = taylor_approx_exp(5 * x, 5 * a, 2)\n",
         "\n",
-        "# Calculate MSE for both methods\n",
+        "\n",
         "mse_method1 = mean_squared_error(y_e5x, method1_approx)\n",
         "mse_method2 = mean_squared_error(y_e5x, method2_approx)\n",
         "\n",
         "print(f\"MSE for Method 1 (Taylor of e^2x * Taylor of e^3x): {mse_method1}\")\n",
         "print(f\"MSE for Method 2 (Taylor of e^5x): {mse_method2}\")\n",
         "\n",
-        "# Determine which method is more accurate\n",
+        "\n",
         "if mse_method1 < mse_method2:\n",
         "    print(\"Method 1 is more accurate.\")\n",
         "elif mse_method2 < mse_method1:\n",
@@ -679,7 +668,7 @@
         "else:\n",
         "    print(\"Both methods have the same accuracy.\")\n",
         "\n",
-        "# Plot the results\n",
+        "\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.plot(x, y_e5x, label='$e^{5x}$ (Original)')\n",
         "plt.plot(x, method1_approx, label='Method 1 (Taylor $e^{2x} \\cdot$ Taylor $e^{3x}$)')\n",
